bdr.BDR2.scala.error
Compilation error:
BDR2:7: error: ';' expected but ',' found.
  case l if l=="C" => forward(),forward();forward();
                               ^BDR2:8: error: ';' expected but ',' found.
  case l if l=="D" => forward();forward(),forward();forward()
                                         ^BDR2:9: error: ';' expected but ',' found.
  case l if l=="E" => forward(),forward();forward()forward();forward();
                               ^BDR2:10: error: ';' expected but ',' found.
  case l if l=="F" => forward();forward(),forward();forward();forward();forward();
                                         ^